--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,97 +1,71 @@
 $progress-color: #c2b0ac;
 
 #nprogress .bar {
-  background: $progress-color;
-  height: 3.3px;
+	background: $progress-color;
+	height: 3.3px;
 }
 
 #nprogress .peg {
-  box-shadow: 0 0 10px $progress-color, 0 0 5px $progress-color;
+	box-shadow: 0 0 10px $progress-color, 0 0 5px $progress-color;
 }
 
 #nprogress .spinner-icon {
-  display: none;
-  border-top-color: $progress-color;
-  border-left-color: $progress-color;
+	display: none;
+	border-top-color: $progress-color;
+	border-left-color: $progress-color;
 }
 // Scrollbar css
 html *::-webkit-scrollbar {
-    border-radius: 0;
-    width: 8px;
+	border-radius: 0;
+	width: 8px;
 }
 
 html *::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	background-color: rgba(0, 0, 0, 0.15);
 }
 
 html *::-webkit-scrollbar-track {
-    border-radius: 0;
-    background-color: rgba(0, 0, 0, 0);
+	border-radius: 0;
+	background-color: rgba(0, 0, 0, 0);
 }
-
 
 // back to top
 .top-to-btm {
-  position: relative;
-}
-.icon-position {
-  position: fixed;
-  bottom: 2rem;
-  right: 4rem;
-  z-index: 20;
-}
-@media (max-width: 640px) {
-  .icon-position {
-    bottom: 1rem;
-    right: 1rem;
-  }
-}
-.icon-style {
-  background-color: #b8b8b8;
-  border-radius: 50%;
-  height: 35px;
-  width: 35px;
-  color: rgba(237, 237, 237, 0.971);
-  cursor: pointer;
-  animation: movebtn 3s ease-out infinite;
-  transition: all 0.5s ease-out;
-}
-.icon-style:hover {
-  background: #fff;
-  color: #b8b8b8;
-}
-@keyframes movebtn {
-  0% {
-    transform: translateY(0px);
-  }
-
-  50% {
-    transform: translateY(-10px);
-  }
-
-  100% {
-    transform: translateY(0px);
-  }
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	bottom: 1.5rem;
+	right: 1.5rem;
+	width: 3rem;
+	height: 3rem;
+	font-size: 1rem;
+	line-height: 3rem;
+	z-index: 1;
+	background-color: #807c80;
+	border: none;
+	border-radius: 50%;
+	cursor: pointer;
 }
 // spoity
 @media only screen and (min-width: 1000px) {
-  .move-position {
-    animation: moveSpotify 3s ease-out infinite;
-    transition: all 0.5s ease-out;
-    z-index: 20;
-  }
-  @keyframes moveSpotify {
-    0% {
-      transform: translateY(0px);
-    }
+	.move-position {
+		animation: moveSpotify 3s ease-out infinite;
+		transition: all 0.5s ease-out;
+		z-index: 20;
+	}
+	@keyframes moveSpotify {
+		0% {
+			transform: translateY(0px);
+		}
 
-    50% {
-      transform: translateY(-6px);
-    }
+		50% {
+			transform: translateY(-6px);
+		}
 
-    100% {
-      transform: translateY(0px);
-    }
-  }
+		100% {
+			transform: translateY(0px);
+		}
+	}
 }
