--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -92,7 +92,7 @@ html *::-webkit-scrollbar-track {
 	transform: scaleY(0.4);
 	height: 100%;
 	width: var(--boxSize);
-	background: #1DB954;
+	background: #1db954;
 	animation-duration: 1.2s;
 	animation-timing-function: ease-in-out;
 	animation-iteration-count: infinite;
@@ -166,4 +166,46 @@ html *::-webkit-scrollbar-track {
 	100% {
 		filter: hue-rorate(360deg);
 	}
+}
+
+// table
+.table-border::after {
+	content: '';
+	border-bottom: 1px solid #eee;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	position: absolute;
+}
+// heart
+.heart-before::before {
+	content: '';
+	background-image: url('../../public/assets/image/love.png');
+	background-repeat: no-repeat;
+	height: 24px;
+	left: 0;
+	left: 50%;
+	margin-left: -12px;
+	margin-top: -12px;
+	position: absolute;
+	right: auto;
+	top: 0;
+	top: 50%;
+	width: 24px;
+	background-position: -552px 0;
+}
+.heart-after::after {
+	content: '';
+	background-image: url('../../public/assets/image/love.png');
+	background-repeat: no-repeat;
+	height: 24px;
+	left: 0;
+	left: 50%;
+	margin-left: -12px;
+	margin-top: -12px;
+	position: absolute;
+	right: auto;
+	top: 0;
+	top: 50%;
+	width: 24px;
 }
