--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -37,7 +37,23 @@ html *::-webkit-scrollbar-track {
 	border-radius: 0;
 	background-color: rgba(0, 0, 0, 0);
 }
-
+// table-scrollx
+.table-scrollx{
+	&::-webkit-scrollbar {
+		width: 10px;
+	}
+	&::-webkit-scrollbar:horizontal {
+		height: 10px;
+	}
+	&::-webkit-scrollbar-track {
+		background-color: transparentize(#ccc, 0.7);
+	}
+	&::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+		background: transparentize(#6b7280, 0.5);
+		box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
+	}
+}
 // back to top
 .top-to-btm {
 	display: flex;
@@ -171,7 +187,7 @@ html *::-webkit-scrollbar-track {
 // table
 .table-border::after {
 	content: '';
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #ababab;
 	bottom: 0;
 	left: 0;
 	right: 0;
