--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -38,7 +38,7 @@ html *::-webkit-scrollbar-track {
 	background-color: rgba(0, 0, 0, 0);
 }
 // table-scrollx
-.table-scrollx{
+.table-scrollx {
 	&::-webkit-scrollbar {
 		width: 10px;
 	}
@@ -51,7 +51,7 @@ html *::-webkit-scrollbar-track {
 	&::-webkit-scrollbar-thumb {
 		border-radius: 10px;
 		background: transparentize(#6b7280, 0.5);
-		box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
+		box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
 	}
 }
 // back to top
@@ -60,7 +60,7 @@ html *::-webkit-scrollbar-track {
 	justify-content: center;
 	align-items: center;
 	position: fixed;
-	bottom: 1.5rem;
+	bottom: 1.8rem;
 	right: 1.5rem;
 	width: 3rem;
 	height: 3rem;
@@ -153,6 +153,9 @@ html *::-webkit-scrollbar-track {
 	transition: opacity 0.2s, transform 0.2s;
 }
 // tippy
+.tippy-box {
+	left: -10px !important;
+}
 .tippy-popper {
 	left: -10px !important;
 }
