--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,4 +1,5 @@
 $progress-color: #c2b0ac;
+$--light: #afa9a9;
 .progress-bar {
 	position: absolute;
 	bottom: 0;
@@ -56,21 +57,38 @@ html *::-webkit-scrollbar-track {
 }
 // back to top
 .top-to-btm {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	// display: flex;
+	// justify-content: center;
+	// align-items: center;
+	// position: fixed;
+	// bottom: 1.8rem;
+	// right: 1.5rem;
+	// width: 3rem;
+	// height: 3rem;
+	// font-size: 1rem;
+	// line-height: 3rem;
+	// z-index: 2;
+	// background-color: #afa9a9;
+	// border: none;
+	// border-radius: 50%;
+	// cursor: pointer;
 	position: fixed;
-	bottom: 1.8rem;
-	right: 1.5rem;
-	width: 3rem;
-	height: 3rem;
-	font-size: 1rem;
-	line-height: 3rem;
-	z-index: 2;
-	background-color: #afa9a9;
-	border: none;
-	border-radius: 50%;
-	cursor: pointer;
+    z-index: 1;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+    margin-right: 1.5rem;
+    bottom: 0px;
+    right: 0px;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    background-color: $--light;
+    cursor: pointer;
+    transition: all 0.2s ease-out 0s;
 }
 // spotify
 @keyframes quiet {
