--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,3 +1,5 @@
+@import url('https://unpkg.com/open-props/easings.min.css');
+
 $progress-color: #c2b0ac;
 $--light: #afa9a9;
 .progress-bar {
@@ -57,38 +59,23 @@ html *::-webkit-scrollbar-track {
 }
 // back to top
 .top-to-btm {
-	// display: flex;
-	// justify-content: center;
-	// align-items: center;
-	// position: fixed;
-	// bottom: 1.8rem;
-	// right: 1.5rem;
-	// width: 3rem;
-	// height: 3rem;
-	// font-size: 1rem;
-	// line-height: 3rem;
-	// z-index: 2;
-	// background-color: #afa9a9;
-	// border: none;
-	// border-radius: 50%;
-	// cursor: pointer;
 	position: fixed;
-    z-index: 1;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    margin-bottom: 2rem;
-    margin-right: 1.5rem;
-    bottom: 0px;
-    right: 0px;
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
-    background-color: $--light;
-    cursor: pointer;
-    transition: all 0.2s ease-out 0s;
+	z-index: 1;
+	display: flex;
+	-webkit-box-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	margin-bottom: 2rem;
+	margin-right: 1.5rem;
+	bottom: 0px;
+	right: 0px;
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 50%;
+	background-color: $--light;
+	cursor: pointer;
+	transition: all 0.2s ease-out 0s;
 }
 // spotify
 @keyframes quiet {
@@ -245,4 +232,117 @@ html *::-webkit-scrollbar-track {
 	top: 0;
 	top: 50%;
 	width: 24px;
+}
+
+// theme-toggle
+.theme-toggle {
+	--size: 1.5rem;
+	--icon-fill: hsl(210 10% 30%);
+	--icon-fill-hover: hsl(210 10% 15%);
+
+	background: none;
+	border: none;
+	padding: 0;
+
+	inline-size: var(--size);
+	block-size: var(--size);
+	aspect-ratio: 1;
+	border-radius: 50%;
+
+	cursor: pointer;
+	touch-action: manipulation;
+	-webkit-tap-highlight-color: transparent;
+
+	outline-offset: 5px;
+
+	& > svg {
+		inline-size: 100%;
+		block-size: 100%;
+		stroke-linecap: round;
+	}
+
+	[class='dark'] & {
+		--icon-fill: hsl(208 100% 97%);
+		--icon-fill-hover: hsl(210 15% 90%);
+	}
+
+	@media (hover: none) {
+		--size: 48px;
+	}
+}
+
+.sun-and-moon > :is(.moon, .sun, .sun-beams) {
+	transform-origin: center;
+}
+
+.sun-and-moon > :is(.moon, .sun) {
+	fill: var(--icon-fill);
+}
+
+.theme-toggle:is(:hover, :focus-visible) > .sun-and-moon > :is(.moon, .sun) {
+	fill: var(--icon-fill-hover);
+}
+
+.sun-and-moon > .sun-beams {
+	stroke: var(--icon-fill);
+	stroke-width: 2px;
+}
+
+.theme-toggle:is(:hover, :focus-visible) .sun-and-moon > .sun-beams {
+	stroke: var(--icon-fill-hover);
+}
+
+[class='dark'] .sun-and-moon > .sun {
+	transform: scale(1.75);
+}
+
+[class='dark'] .sun-and-moon > .sun-beams {
+	opacity: 0;
+}
+
+[class='dark'] .sun-and-moon > .moon > circle {
+	transform: translateX(-7px);
+}
+
+@supports (cx: 1) {
+	[class='dark'] .sun-and-moon > .moon > circle {
+		cx: 17;
+		transform: translateX(0);
+	}
+}
+
+@media (prefers-reduced-motion: no-preference) {
+	.sun-and-moon > .sun {
+		transition: transform 0.5s var(--ease-elastic-3);
+	}
+
+	.sun-and-moon > .sun-beams {
+		transition: transform 0.5s var(--ease-elastic-4), opacity 0.5s var(--ease-3);
+	}
+
+	.sun-and-moon .moon > circle {
+		transition: transform 0.25s var(--ease-out-5);
+	}
+
+	@supports (cx: 1) {
+		.sun-and-moon .moon > circle {
+			transition: cx 0.25s var(--ease-out-5);
+		}
+	}
+
+	[class='dark'] .sun-and-moon > .sun {
+		transition-timing-function: var(--ease-3);
+		transition-duration: 0.25s;
+		transform: scale(1.75);
+	}
+
+	[class='dark'] .sun-and-moon > .sun-beams {
+		transition-duration: 0.15s;
+		transform: rotateZ(-25deg);
+	}
+
+	[class='dark'] .sun-and-moon > .moon > circle {
+		transition-duration: 0.5s;
+		transition-delay: 0.25s;
+	}
 }
