--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap');
 $progress-color: #c2b0ac;
 $--light: #afa9a9;
+.text3 {
+	font-family: 'Gloria Hallelujah', cursive;
+}
 .progress-bar {
 	position: absolute;
 	bottom: 0;
